@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-11-26T08:20:30Z",
+  "timestamp" : "2022-11-27T01:37:42Z",
   "count_outdated" : 2616,
   "uniques_outdated" : 705,
-  "count" : 2653,
+  "count" : 2654,
   "uniques" : 724,
   "clones" : [
     {
@@ -98,8 +98,8 @@
     },
     {
       "timestamp": "2022-11-26T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
