@@ -1,3 +1,11 @@
+2022-11-27T01:37:42Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3556207028 # 1065
+* notice: last 14d: unq all: 6 38
+* notice: prev accum: outdated-unq outdated-all / unq all: 705 2616 / 724 2653
+* notice: next accum: outdated-unq outdated-all / unq all: 705 2616 / 724 2654
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-11-26]
+
 2022-11-26T08:20:30Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3552917233 # 1063
 * notice: last 14d: unq all: 6 37
